--- a/tutorial_02/public/index.html
+++ b/tutorial_02/public/index.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <h1>hola mundo 2</h1>
+    <button id="btn">click</button>
+    <script>
+        const btn = document.querySelector('#btn');
+        btn.addEventListener('click', function() {
+            alert('hola mundo');
+        });
+    </script>
 </body>
 </html>
